[tool.poetry]
name = "bme280-rpi-logger"
version = "0.1.0"
description = ""
authors = ["Fedor Chervyakov <fchervyakov@gmail.com>"]
readme = "README.md"
packages = [{include = "bme280_rpi_logger"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
rpi-bme280 = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
